! move last edit text with shortcuts to prevent spacing submit buttons off the form

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -2483,6 +2483,9 @@ ul.post_options li {
 	font-size: 0.857em;
 	float: left;
 }
+.shortcuts .lastedit {
+	text-align: left;
+}
 #mobile .shortcuts {
 	display: none;
 }
